# gummy

./: README.md  Results_aggregation_final.ipynb  class_description.md  compile.sh  create_jobs.py  main.tex
literature/resource/: Glover et al. - Quantum Bridge Analytics I A Tutorial on Formulat.pdf:Zone.Identifier  Liang et al. - 2022 - Data structures for speeding up Tabu Search when s.pdf:Zone.Identifier  Wang et al. - 2013 - Backbone guided tabu search for solving the UBQP p.pdf:Zone.Identifier
problem_instances/koch/instances/: QPLIB_3506.qs  QPLIB_3565.qs  QPLIB_3738.qs  QPLIB_3852.qs  QPLIB_5881.qs  QPLIB_8792.qs
problem_instances/qplib/instances/: QPLIB_3506.qs  QPLIB_3565.qs  QPLIB_3642.qs  QPLIB_3650.qs  QPLIB_3693.qs  QPLIB_3705.qs  QPLIB_3706.qs  QPLIB_3738.qs  QPLIB_3745.qs  QPLIB_3822.qs  QPLIB_3832.qs  QPLIB_3838.qs  (+11 more)
result/answer/: test_DTSS_3565.out  test_DTSS_3705.out  test_DTSS_3706.out  test_DTSS_3822.out  test_DTSS_3832.out  test_DTSS_3850.out  test_DTSS_3852.out  test_DTSS_3877.out  test_DTSS_5755.out  test_DTSS_5875.out  test_MSTS_3650.out  test_MSTS_3693.out  test_MSTS_3705.out  test_MSTS_3706.out  test_MSTS_3832.out  test_MSTS_3838.out  test_MSTS_3850.out  test_MSTS_3852.out  test_MSTS_3877.out  test_MSTS_5755.out  test_MSTS_5881.out  test_MSTS_5882.out  test_MSTS_5922.out  test_SA_3642.out  test_SA_3705.out  test_SA_3738.out  test_SA_3822.out  test_SA_3877.out
src/: CMakeLists.txt  DTSSearch.cpp  DTSSearch.hpp  Heuristic.hpp  MSTSearch.cpp  MSTSearch.hpp  Matrix.cpp  Matrix.hpp  SimAnneal.cpp  SimAnneal.hpp  qubo.cpp  read_file.hpp
(+180 files in other folders)
